...
                    android:layout_width="377dp"
                    android:layout_height="171dp"
                    android:text="empty"
                    />


                <ImageView   android:id="@+id/the_real_left_arrow"
                    android:background="@drawable/arrow_1"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="825dp"
                    android:clickable="true"
                    android:layout_width="35.13dp"
                    android:layout_height="28dp" />

                <ImageView   android:id="@+id/the_real_right_arrow"
                    android:background="@drawable/arrow_2"
                    android:layout_marginStart="308dp"
                    android:layout_marginTop="825dp"
                    android:clickable="true"
                    android:layout_width="35.13dp"
                    android:layout_height="28dp" />
...
                    android:background="@drawable/container_of_post_shape"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="344dp"
                    android:layout_width="302dp"
                    android:layout_height="456dp" />

                <View   android:id="@+id/contact_person"
                    android:background="@drawable/contact_person_shape"
                    android:layout_marginStart="76dp"
                    android:layout_marginTop="753dp"
                    android:clickable="true"
                    android:layout_width="59dp"
                    android:layout_height="32dp" />
...
                    android:background="@drawable/filter_from_sport_shape"
                    android:layout_marginStart="136dp"
                    android:layout_marginTop="295dp"
                    android:layout_width="150dp"
                    android:layout_height="40dp" />
                <EditText
                    android:id="@+id/search_for_post"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="165dp"
                    android:layout_marginTop="290dp"
                    android:ems="10"
                    android:hint="Search"
...
