...
                    android:background="@drawable/container_of_all_post_shape"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="344dp"
                    android:layout_width="302dp"
                    android:layout_height="236dp" />

                <ImageView android:id="@+id/back_to_posts_container"
                    android:src="@drawable/back_to_posts_container"
                    android:contentDescription="back_to_posts_container"
                    android:layout_marginStart="62dp"
                    android:clickable="true"
                    android:layout_marginTop="621dp"
                    android:layout_width="265dp"
...
