...
					android:layout_marginTop="747dp"
					android:layout_width="38dp"
					android:layout_height="38dp" />



				<ImageView android:id="@+id/arrow_left"
					android:src="@drawable/arrow_1"
					android:contentDescription="_8684636_medal_champion_award_winner_olympic_icon_1"
					 android:layout_marginStart="155dp"
					android:layout_marginTop="390dp"
					android:clickable="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				<ImageView android:id="@+id/arrow_right"
					android:src="@drawable/arrow_2"
					android:clickable="true"
					android:layout_marginStart="205dp"
					android:layout_marginTop="391dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
...
